external-crates/move/crates/move-compiler/tests/move_2024/parser/enum_invalid.snap
---
source: crates/move-compiler/tests/move_check_testsuite.rs
info:
  flavor: core
  edition: 2024.alpha
  lint: false
---
error[E01003]: invalid modifier
  ┌─ tests/move_2024/parser/enum_invalid.move:2:5
  │
2 │     enum Temperature {
  │     ^^^^ Invalid enum declaration. Internal enum declarations are not yet supported
  │
  = Visibility annotations are required on enum declarations.

error[E01003]: invalid modifier
  ┌─ tests/move_2024/parser/enum_invalid.move:8:5
  │
8 │     public(package) enum EnumWithPhantom<phantom T> {
  │     ^^^^^^^^^^^^^^^ Invalid enum declaration. 'public(package)' enum declarations are not yet supported
  │
  = Visibility annotations are required on enum declarations.

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/enum_invalid.move:13:13
   │
13 │        Done(x: u64),
   │             ^ Cannot use named fields in a positional definition

error[E01002]: unexpected token
   ┌─ tests/move_2024/parser/enum_invalid.move:14:18
   │
14 │        Add { u64 },
   │                  ^
   │                  │
   │                  Unexpected '}'
   │                  Expected ':'
